Fixing button organization

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -235,32 +235,32 @@ block granular
     .col-4
       ul.list-unstyled
         li
-          button.button-large Large
+          button.button.button-large Large
         li
           button.button Regular
-        li
-          button.button-small Small
-
-    .col-4
-      ul.list-unstyled
-        li
-          button.button-large Large
-          ul.button-dropdown
-            li
-              a(href="#") Option 1
-            li
-              a(href="#") Option 2
-
-        li
-          button.button Regular
-          ul.button-dropdown
-            li
-              a(href="#") Option 1
-            li
-              a(href="#") Option 2
-
         li
           button.button.button-small Small
+
+    .col-4
+      ul.list-unstyled
+        li
+          button.button.button-large Large
+          ul.button-dropdown
+            li
+              a(href="#") Option 1
+            li
+              a(href="#") Option 2
+
+        li
+          button.button Regular
+          ul.button-dropdown
+            li
+              a(href="#") Option 1
+            li
+              a(href="#") Option 2
+
+        li
+          button.button.button.button-small Small
           ul.button-dropdown
             li
               a(href="#") Option 1
@@ -270,7 +270,7 @@ block granular
     .col-4
       ul.list-unstyled
         li
-          button.button-large
+          button.button.button-large
             | Large
             ul.button-dropdown
               li
@@ -288,7 +288,7 @@ block granular
                 a(href="#") Option 2
 
         li
-          button.button-small
+          button.button.button-small
             | Small
             ul
               li
