--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -22,37 +22,37 @@
   +button
   // TODO: Make loop
   &.button-primary
-    +button($primary-color)
+    +button-color($primary-color)
 
   &.button-secondary
-    +button($secondary-color)
+    +button-color($secondary-color)
 
   &.button-clear
-    +button(transparent)
+    +button-color(transparent)
 
   &.button-red
-    +button($red)
+    +button-color($red)
 
   &.button-orange
-    +button($orange)
+    +button-color($orange)
 
   &.button-yellow
-    +button($yellow)
+    +button-color($yellow)
 
   &.button-green
-    +button($green)
+    +button-color($green)
 
   &.button-blue
-    +button($blue)
+    +button-color($blue)
 
   &.button-violet
-    +button($violet)
+    +button-color($violet)
 
   &.button-small
-    +button($size: 0.85)
+    +button-size($size: 0.85)
 
   &.button-large
-    +button($size: 1.2)
+    +button-size($size: 1.2)
 
 // FORMS
 // -----
