--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -31,10 +31,18 @@
   +button-color($color)
   +button-size($size)
 
+  &.open
+    &.with-submenu
+      ul
+        display: block
+
 // Separated from main mixin for access by non-semantic library.
 
 =button-color($color)
   background-color: $color
+
+  &.open
+    background-color: darken($color, 5%)
 
   @if lightness($color) > 75%
     color: map-get($black, lighter)
@@ -63,18 +71,28 @@
         right: -1/2 * $size * $size * map-get($rootElement, paddingH)
 
     ul
-      padding:
-        top: $size * $size * map-get($rootElement, paddingV)
       +list-unstyled
-      margin-bottom: 0
+      +root-element($size)
+      padding:
+        left: $size * $size * map-get($rootElement, paddingH)
+        right: $size * $size * map-get($rootElement, paddingH)
+      position: absolute
+      top: 100%
+      left: -1px
+      margin-top: 5px
+      right: -$space
+      border-color: map-get($white, darker)
+      background: white
+      z-index: 10
 
       li
-        +root-element($size)
         padding:
           left: 0
           right: 0
         margin:
           bottom: 0
+        font-size: 0.9rem * $size
+        color: map-get($black, lightest)
 
         a
           color: inherit
