--- a/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
@@ -25,6 +25,9 @@
     box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1) inset
     text-decoration: none
 
+  // TODO: Done this way, these properties are not mutex
+  //       in the case of missing params.
+
   +button-color($color)
   +button-size($size)
 
