Improving dropdowns still

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -250,7 +250,8 @@ block granular
       ul.list-unstyled
         li
           button.button.button-large Large
-          ul.button-dropdown
+          .button-dropdown
+          ul
             li
               a(href="#") Option 1
             li
@@ -258,7 +259,8 @@ block granular
 
         li
           button.button.with-submenu Regular
-          ul.button-dropdown
+          .button-dropdown
+          ul
             li
               a(href="#") Option 1
             li
@@ -266,7 +268,8 @@ block granular
 
         li
           button.button.button.button-small Small
-          ul.button-dropdown
+          .button-dropdown
+          ul
             li
               a(href="#") Option 1
             li
