--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -41,10 +41,8 @@ $space:               25px
 $heading-font-family: 'Lato', helvetica neue, sans-serif
 $body-font-family:    'Lato', helvetica neue, sans-serif
 $base-font-size:      16px
-$black-augment:       #000
-$white-augment:       #FFF
-$saturation-augment:  0%
-$luminosity-augment:  0%
+$default-font-color:          map-get($gray, darkest)
+$default-line-height: 1.4rem
 
 // --------------------------
 
@@ -54,7 +52,6 @@ $rootElement: (paddingV: 5px, paddingH: 12px)
 
 $default-font: $body-font-family
 $default-font-size: $base-font-size
-$default-line-height: 1.4rem
 
 //
 // Core styling
