--- a/lib/sass/core/_typography.sass
+++ b/lib/sass/core/_typography.sass
@@ -4,6 +4,7 @@
   font-size: calc(#{$default-font-size - 2} + #{$scalingFactor})
   line-height: $default-line-height
   line-height: calc(#{$default-line-height} + #{$scalingFactor})
+  color: $default-font-color
 
 html 
   color: map-get($black, lightest)
@@ -18,6 +19,7 @@ h1, h2, h3, h4, h5, h6, p
 p
   margin: 0
     bottom: $space
+  line-height: $default-line-height
 
 a
   text-decoration: none
