Nailing button groups

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -161,7 +161,8 @@ block granular
     exists with the dropdown instead of as one.
 
   button.button Upload
-  ul.button-dropdown
+  .button-dropdown
+  ul
     li
       a(href="#") Choose from library
     li
@@ -173,7 +174,8 @@ block granular
         <button class="button" role="button">
           Upload
         </button>
-        <ul class="button-dropdown">
+        <div class="button-dropdown"></div>
+        <ul>
           <li>
             <a href="#">Choose from library</a>
           </li>
