--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -162,6 +162,9 @@ html
 =button($color: map-get($white, dark), $size: 1)
   +button-default($color, $size)
 
+=button-group($color: map-get($white, dark), $size: 1)
+  +button-group-default($color, $size)
+
 // Forms
 // -----
 
