adding the smallest component ever.

--- a/lib/sass/components/_tiles.sass
+++ b/lib/sass/components/_tiles.sass
@@ -1,8 +1,12 @@
 =tile-default ($color: map-get($gray, dark))
   +root-element
+  +hr
   display: block
   text-decoration: none
-  border-color: map-get($white, darker)
+  border:
+    left: 1px solid map-get($white, darker)
+    right: 1px solid map-get($white, darker)
+    bottom: 1px solid map-get($white, darker)
   background: white
   padding: $space/2
   color: $default-font-color
@@ -15,7 +19,7 @@
 
   overflow: hidden
   margin-bottom: $space
-  border-top: 3px solid $color
+  border-top-color: $color
 
   > h1, > h2, > h3, > h4, > h5
     color: $color
