--- a/lib/sass/core/_base_components.sass
+++ b/lib/sass/core/_base_components.sass
@@ -8,10 +8,10 @@
 @import ../components/_alerts
 @import ../components/_buttons
 @import ../components/_forms
+@import ../components/_hr
 @import ../components/_images
 @import ../components/_labels
 @import ../components/_modals
 @import ../components/_nav
 @import ../components/_progress
 @import ../components/_tables
-@import ../components/_tiles
