--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -17,25 +17,18 @@
 // ---------
 
 // Grayscale
-
 $white: (dark: #F7F7F7, darker: #DDD, darkest: #CCC)
 $gray:  (lightest: #BBB, lighter: #AAA, light: #999, dark: #777, darker: #666, darkest: #555)
 $black: (lightest: #444, lighter: #333, light: #222)
 
 // Rainbow
-
-$red:            #CA3518
-$orange:         darkorange
-$yellow:         #ffe312
-$green:          #58AA00
-$blue:           cornflowerblue
-$violet:         darkmagenta
+$color: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blue: cornflowerblue, violet: darkmagenta)
 
 // Ten point design variables
 // --------------------------
 // Modifying just these ten variables will take care of 90% of your theme
 
-$primary-color:       $blue
+$primary-color:       $map-get($color, blue)
 $secondary-color:     map-get($white, darker)
 $space:               25px
 $heading-font-family: 'Lato', helvetica neue, sans-serif
@@ -198,7 +191,7 @@ hr
 // Labels
 // ------
 
-=label($background-color: $blue)
+=label($background-color: $map-get($color, blue))
   +label-default($background-color)
 
 // Navigation
@@ -216,7 +209,7 @@ hr
 //
 // Dependent Components
 // ====================
-// Dependent components keep code DRY by reusing core and base 
+// Dependent components keep code DRY by reusing core and base
 // componenets that have already been styled by the theme.
 //
 
