Using maps for colors

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -95,10 +95,10 @@ block variations
       <span>
 
           .send {
-            @include button($green);
+            @include button(map-get($color, green));
           }
           .delete {
-            @include button($red);
+            @include button(map-get($color, red));
           }
           .info {
             @include button(#6495ed);
