--- a/rails/app/assets/stylesheets/kickstart_rails/components/_labels.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_labels.sass
@@ -1,4 +1,4 @@
-=label-default($background-color: $blue)
+=label-default($background-color: map-get($color, blue))
   +root-element
   background: $background-color
   font-size: 0.8rem
