--- a/rails/app/assets/stylesheets/kickstart_rails/components/_tooltips.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_tooltips.sass
@@ -50,7 +50,7 @@
       transform: translateY(-8px)
       transition: transform 0.25s
 
-=tooltip_trigger-default($background-color: $blue)
+=tooltip_trigger-default($background-color: map-get($color, blue))
   position: relative
   display: inline-block
   cursor: pointer
