--- a/rails/app/assets/stylesheets/kickstart_rails/components/_typography.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_typography.sass
@@ -21,13 +21,13 @@ p
 
 a
   text-decoration: none
-  color: $blue
+  color: map-get($color, blue)
 
   &:hover
     text-decoration: underline
 
 =pre-default
-  color: darken($blue, 25%)
+  color: darken(map-get($color, blue), 25%)
   +border-radius($space/5)
   padding: ($space/5)
   font-family: monospace
