--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -66,7 +66,7 @@
     background-color: white
 
   &yellow
-    background-color: $yellow
+    background-color: map-get($color, yellow)
 
 .col-example
   padding: $space/2
