--- a/lib/jade/docs/3.x/ui/labels/index.jade
+++ b/lib/jade/docs/3.x/ui/labels/index.jade
@@ -60,7 +60,7 @@ block variations
           <span class="notice">New!</span>
 
           .error {
-            @include label(map-get($color, red));
+            @include label(map-get($colors, red));
           }
           .notice {
             @include label($primary);
