--- a/lib/sass/core/_typography.sass
+++ b/lib/sass/core/_typography.sass
@@ -23,13 +23,13 @@ p
 
 a
   text-decoration: none
-  color: map-get($color, blue)
+  color: map-get($colors, blue)
 
   &:hover
     text-decoration: underline
 
 =pre-default
-  color: darken(map-get($color, blue), 25%)
+  color: darken(map-get($colors, blue), 25%)
   border-radius: $space/5
   padding: ($space/5)
   font-family: monospace
