--- a/lib/jade/docs/3.x/ui/tiles/index.jade
+++ b/lib/jade/docs/3.x/ui/tiles/index.jade
@@ -109,9 +109,9 @@ block variations
       desired color as a parameter. The headlines will automatically pick up the
       same styles.
 
-          a.tile.red    { @include tile(map-get($color, red)); }
-          a.tile.orange { @include tile(map-get($color, orange)); }
-          a.tile.yellow { @include tile(map-get($color, yellow)); }
-          a.tile.green  { @include tile(map-get($color, green)); }
-          a.tile.blue   { @include tile(map-get($color, blue)); }
-          a.tile.violet { @include tile(map-get($color, violet)); }
+          a.tile.red    { @include tile(map-get($colors, red)); }
+          a.tile.orange { @include tile(map-get($colors, orange)); }
+          a.tile.yellow { @include tile(map-get($colors, yellow)); }
+          a.tile.green  { @include tile(map-get($colors, green)); }
+          a.tile.blue   { @include tile(map-get($colors, blue)); }
+          a.tile.violet { @include tile(map-get($colors, violet)); }
