--- a/rails/app/assets/stylesheets/kickstart_rails/core/_dependent_components.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_dependent_components.sass
@@ -9,4 +9,5 @@
 @import ../components/_modals
 @import ../components/_notifications
 @import ../components/_tabs
+@import ../components/_tiles
 @import ../components/_tooltips
