--- a/rails/app/assets/stylesheets/kickstart_rails/core/_typography.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_typography.sass
@@ -4,6 +4,7 @@
   font-size: calc(#{$default-font-size - 2} + #{$scalingFactor})
   line-height: $default-line-height
   line-height: calc(#{$default-line-height} + #{$scalingFactor})
+  color: $default-font-color
 
 html 
   color: map-get($black, lightest)
@@ -18,16 +19,17 @@ h1, h2, h3, h4, h5, h6, p
 p
   margin: 0
     bottom: $space
+  line-height: $default-line-height
 
 a
   text-decoration: none
-  color: map-get($color, blue)
+  color: map-get($colors, blue)
 
   &:hover
     text-decoration: underline
 
 =pre-default
-  color: darken(map-get($color, blue), 25%)
+  color: darken(map-get($colors, blue), 25%)
   border-radius: $space/5
   padding: ($space/5)
   font-family: monospace
