--- a/lib/jade/docs/3.x/ui/tiles/index.jade
+++ b/lib/jade/docs/3.x/ui/tiles/index.jade
@@ -11,22 +11,22 @@ block hero-example
         p Use this menu to check bus schedules
 
     .col.col-third
-      .tile.red
+      .tile.tile-red
         h1 Oh no, something's wrong
         p Check your reservation times. I think you may have made an error.
 
     .col.col-third
-      .tile.red
+      .tile.tile-green
         h1 We have you booked!
         p Thanks for reserving with us. We'll see you on Saturday.
 
 block basic
   :markdown
     While tiles appear as just styled boxes, there is some opinionated
-    logic to style the containing typography in a way that makes it 
+    logic to style the containing typography in a way that makes it
     look good.
 
-    The best way to use tiles is with standard typography tags like 
+    The best way to use tiles is with standard typography tags like
     headings and paragraphs.
 
   .tile
@@ -36,7 +36,7 @@ block basic
   .if-semantic
     :markdown
       <span>
-        
+
           <aside class="books-and-music">
             <h1>Books and Music</h1>
             <p>Check out our great selection of entertainment. We know you'll find something you enjoy.</p>
@@ -49,7 +49,7 @@ block basic
   .ifnot-semantic
     :markdown
       <span>
-        
+
           <aside class="tile">
             <h1>Books and Music</h1>
             <p>Check out our great selection of entertainment. We know you'll find something you enjoy.</p>
@@ -59,59 +59,59 @@ block variations
   h2 Coloring tiles
   .row
     .col.col-third
-      a.tile.red
+      a.tile.tile-red
         h1 News
         p Top of the hour alerts on what's going on in the world today.
 
     .col.col-third
-      a.tile.orange
+      a.tile.tile-orange
         h1 Sports
         p Get the latest scores and interviews with players in this action-packed segment.
 
     .col.col-third
-      a.tile.yellow
+      a.tile.tile-yellow
         h1 Living
         p Learn about some of the hottest new restaurants in the area.
 
     .col.col-third
-      a.tile.green
+      a.tile.tile-green
         h1 Finance
         p We'll tell you about the movers and shakers in the world today.
 
     .col.col-third
-      a.tile.blue
+      a.tile.tile-blue
         h1 International
         p Culture and top events from around the world
 
     .col.col-third
-      a.tile.violet
+      a.tile.tile-violet
         h1 Opinions
         p Our top columnists state their positions on hot button issues.
 
   :markdown
     <span>
 
-        <a class="tile red">...</a>
-        <a class="tile orange">...</a>
-        <a class="tile yellow">...</a>
-        <a class="tile green">...</a>
-        <a class="tile blue">...</a>
-        <a class="tile violet">...</a>
+        <a class="tile tile-red">...</a>
+        <a class="tile tile-orange">...</a>
+        <a class="tile tile-yellow">...</a>
+        <a class="tile tile-green">...</a>
+        <a class="tile tile-blue">...</a>
+        <a class="tile tile-violet">...</a>
 
   .ifnot-semantic
     :markdown
-      Coloring tiles is pretty straightforward, only requiring you to add a color or 
+      Coloring tiles is pretty straightforward, only requiring you to add a color or
       `primary`/`secondary` to the `tile` class.
 
   .if-semantic
     :markdown
-      Coloring tiles is pretty straightforward, only requiring you to pass in the 
+      Coloring tiles is pretty straightforward, only requiring you to pass in the
       desired color as a parameter. The headlines will automatically pick up the
       same styles.
 
-          a.tile.red    { @include tile(map-get($colors, red)); }
-          a.tile.orange { @include tile(map-get($colors, orange)); }
-          a.tile.yellow { @include tile(map-get($colors, yellow)); }
-          a.tile.green  { @include tile(map-get($colors, green)); }
-          a.tile.blue   { @include tile(map-get($colors, blue)); }
-          a.tile.violet { @include tile(map-get($colors, violet)); }
+          a.tile.tile-red    { @include tile(map-get($colors, red)); }
+          a.tile.tile-orange { @include tile(map-get($colors, orange)); }
+          a.tile.tile-yellow { @include tile(map-get($colors, yellow)); }
+          a.tile.tile-green  { @include tile(map-get($colors, green)); }
+          a.tile.tile-blue   { @include tile(map-get($colors, blue)); }
+          a.tile.tile-violet { @include tile(map-get($colors, violet)); }
