--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -11,6 +11,6 @@
 
       ul
         li
-          a.button.primary(href="/docs/3.x/" role="button")
+          a.button.button-primary(href="/docs/3.x/" role="button")
             span.fa.fa-cloud-download
             |  Download
